2_storage/k8s/service1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service1-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /api/service1
            pathType: "Prefix"
            backend:
              service:
                name: service1-service
                port:
                  number: 80
